[Deploy] with page

--- a/index.html
+++ b/index.html
@@ -321,27 +321,31 @@
                     your machine.</p>
             </div>
             <div class="doc-card">
-                <h4>Do I need a GPU?</h4>
-                <p>For local models (Ollama), a GPU is recommended for speed. However, cloud models like Gemini require
-                    zero local hardware power.</p>
-            </div>
-            <div class="doc-card">
-                <h4>Can I add my own tools?</h4>
-                <p>Absolutely. Use our Python Plugin SDK to add any capability in minutes. See the Docs section for
-                    details.</p>
+                <h4>Where is the source code?</h4>
+                <p>While Agentic is a closed-source flagship binary, the magic that powers it isn't a secret. It is
+                    built entirely on the <a href="https://github.com/Ghua8088/pytron-kit"
+                        style="color: var(--accent-color); text-decoration: underline;">Pytron-Kit</a>—the same engine
+                    you can use to build your own AI apps.</p>
             </div>
             <div class="doc-card">
                 <h4>Is it free?</h4>
-                <p>Agentic's core framework and interface are completely free and open-source.</p>
+                <p>The standard version of Agentic is free to use. We believe in providing elite tools for everyone,
+                    powered by the open-source Pytron ecosystem.</p>
+            </div>
+            <div class="doc-card">
+                <h4>Can I build this myself?</h4>
+                <p>Yes. If you want to replicate the bridge between Python logic and beautiful React UIs seen here, our
+                    core engine <strong>Pytron-Kit</strong> is fully documented and open for developers.</p>
             </div>
         </div>
     </section>
 
-    <section id="architecture" style="padding: 100px 10%; background: rgba(255,255,255,0.01);">
+    <section id="architecture"
+        style="padding: 100px 10%; background: linear-gradient(180deg, transparent, rgba(0, 242, 255, 0.03));">
         <div class="section-title">
-            <h2>Modern Architecture</h2>
-            <p style="color: var(--text-secondary);">Built on the powerful Pytron framework for zero-config bridge
-                between Python and React.</p>
+            <h2 style="letter-spacing: -1px;">The Engine Behind the Curtain</h2>
+            <p style="color: var(--text-secondary); max-width: 600px; margin: 0 auto;">Agentic isn't just an app; it's a
+                showcase of the <strong>Pytron-Kit</strong> architecture.</p>
         </div>
 
         <div
